# pyproject.toml
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata
# https://pip.pypa.io/en/stable/reference/build-system/pyproject-toml

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "notsorandom"
description = "A source of randomness that obeys the gambler's fallacy"
authors = [
	{name = "Estelle Poulin", email = "dev@inspiredby.es"},
]
readme = "README.md"
requires-python = ">=3.11"
keywords = ["gambler's dice"]
license = {text = "GPLv3"}
classifiers = [
    "Programming Lang uage :: Python :: 3",
]
dynamic = ["version", "dependencies"]


[project.urls]
homepage = "https://notsorandom.inspiredby.es"
repository = "https://gitlab.com/inspiredbyes/notsorandom"
changelog = "https://gitlab.com/inspiredbyes/notsorandom/-/blob/main/CHANGELOG.md"


[tool.setuptools]
packages = ["notsorandom", "alembic"]


[tool.setuptools.dynamic]
version = {attr = "notsorandom.__version__"}
dependencies = {file = ["requirements.txt"]}


[tool.black]
line-length = 100


[tool.isort]
profile = "black"


[tool.vulture]
ignore_names = ["self", "cls"]


[tool.pytest.ini_options]
asyncio_mode = "auto"


